UI & UX improvements: enhanced product display, product details navigation, register page background, animated icons, and delete logic

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <script src="https://cdn.lordicon.com/lordicon.js"></script>
   <meta charset="utf-8">
   <title>Client</title>
   <base href="/">
